align 4 end screen updated, memory bug fixes done

--- a/games/align-four/styles/index.processed.css
+++ b/games/align-four/styles/index.processed.css
@@ -389,15 +389,17 @@ h2 {
 
 .swal2-actions {
   flex-direction: row;
+  display: grid;
+  position: relative;
+  margin: 0;
+  height: 10em;
 }
 
 .swal2-actions button {
-  width: 4em;
+  width: 12em;
   height: 4em;
   border-radius: 2em !important;
-  margin-right: 1em;
-  margin-left: 1em;
-  box-shadow: 3px 3px 18px -8px #263238;
+  box-shadow: 8px 5px 20px -8px #263238;
 }
 
 .swal2-actions button i {
@@ -405,15 +407,26 @@ h2 {
 }
 
 .swal2-confirm {
-  background-color: #fcbf49 !important;
+  background-color: #0096c7 !important;
+  position: absolute;
+  top: 0;
+  width: 15em;
 }
 
 .swal2-deny {
-  background-color: #f77f00 !important;
+  background-color: #eef4ed !important;
+  color: black !important;
+  position: absolute;
+  right: 0;
+  top: 50%;
 }
 
 .swal2-cancel {
-  background-color: #d62828 !important;
+  background-color: #eef4ed !important;
+  color: black !important;
+  position: absolute;
+  left: 0;
+  top: 50%;
 }
 
 .swal2-title {
@@ -422,12 +435,32 @@ h2 {
   padding-top: 0.1em !important;
 }
 
+.gif-div {
+  display: grid;
+  grid-column: 2;
+  grid-row: 3;
+  align-self: flex-end;
+  justify-self: safe center;
+  margin: auto;
+  margin-right: 0.3em;
+  margin-top: 0.3em;
+  margin-bottom: 0.3em;
+  font-size: 1.2em;
+  position: absolute;
+  right: 0;
+ }
+
+ .gif-div img {
+  height: 10vh;
+ }
+
 .logo-div {
   display: grid;
   grid-column: 2;
   grid-row: 1;
   align-self: center;
   justify-self: safe center;
+  margin-top: 1em;
 }
 
 .logo-div img {
@@ -460,11 +493,12 @@ h2 {
 .share-div {
   display: grid;
   grid-column: 2;
-  grid-row: 4;
+  grid-row: 1;
   align-self: start;
   justify-self: safe end;
   margin: auto;
   margin-right: 0.3em;
+  margin-top: 0.3em;
   font-size: 1.2em;
 }
 
