--- a/games/sweet-memory-game/end_screen.css
+++ b/games/sweet-memory-game/end_screen.css
@@ -104,8 +104,6 @@ body {
 	width: 12em;
 	height: 4em;
 	border-radius: 2em !important;
-	margin-right: 1em;
-	margin-left: 1em;
 	box-shadow: 8px 5px 20px -8px #263238
 }
 
